# huffman

./: CMakeLists.txt
lib/: CMakeLists.txt  bit_string.cpp  char_counter.cpp  code.cpp  decoder.cpp  encoder.cpp  tree.cpp
lib/headers/: bit_string.h  char_counter.h  code.h  decoder.h  encoder.h  file_exceptions.h  tree.h
test/: CMakeLists.txt  huffman_test.cpp
test/gtest/: gtest_main.cc
test/test_sources/: 1.out  2.in  2.out  2.res  4.out  4.res
utility/: CMakeLists.txt  file_decoder.cpp  file_encoder.cpp  file_reader.cpp  file_writer.cpp  main.cpp
utility/headers/: file_decoder.h  file_encoder.h  file_reader.h  file_writer.h  main.h
